# kitelogik

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  cliff.toml  docker-compose.yml  pyproject.toml  quickstart.py  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  scorecard.yml
benchmarks/: bench_gate.py  bench_memory_session.py
examples/: 01_decorator.py  02_governed_toolbox.py  03_openai_tools.py  04_langchain_agent.py  05_hitl_escalation.py  06_credential_delegation.py  07_plan_gate.py  README.md
examples/adversarial/: README.md  budget_exhaustion_runaway.py  delegation_scope_escalation.py  memory_poisoning_minja.py  plan_step_injection.py
kitelogik/: __init__.py  _init_templates.py  cli.py  edition.py  governed.py  policy_tester.py
kitelogik/adapters/: __init__.py  _base.py  crewai.py  dify.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai.py  openai_agents.py  pydantic_ai.py  semantic_kernel.py
kitelogik/agents/: __init__.py  _demo_tools.py  errors.py  google_client.py  llm.py  openai_client.py  session.py  tools.py
kitelogik/anchor/: __init__.py  credentials.py  models.py  queue.py
kitelogik/audit/: __init__.py  replay.py  store.py
kitelogik/mcp/: __init__.py  client.py  models.py  registry.py  stdio_transport.py
kitelogik/memory/: __init__.py  models.py  store.py
kitelogik/observability/: __init__.py  tracer.py
kitelogik/policies/: agent_budget.rego  agent_budget_test.rego  agent_lifecycle.rego  agent_lifecycle_test.rego  agent_plan.rego  agent_plan_test.rego  compiler.py  data_classification.rego  data_classification_test.rego  delegation.rego  delegation_test.rego  financial.rego  financial_test.rego  main.rego  main_test.rego  schema.py  security.rego  security_test.rego  userpolicy.rego  userpolicy_test.rego
kitelogik/policies/examples/: example_financial_thresholds.rego  example_role_based_access.rego  example_rules.yaml  example_tool_allowlist.rego
kitelogik/policy_templates/: README.md  code-execution-restrictions.yaml  customer-support.yaml  financial-refunds.yaml  healthcare-phi-access.yaml
kitelogik/tether/: __init__.py  gate.py  hierarchy.py  models.py  opa_client.py  regorus_client.py  sanitizer.py
tests/: conftest.py  test_adapter_maturity.py  test_adversarial_demos.py  test_audit_store.py  test_benchmark.py  test_cli.py  test_credentials.py  test_crewai_adapter.py  test_e2e_flows.py  test_gate.py  test_google_adk_adapter.py  test_governance_events.py  test_governed.py  test_hierarchy.py  test_hitl_queue.py  test_init_example.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_llm_clients.py  test_llm_clients_coverage.py  test_mcp_client.py  test_mcp_stdio.py  test_mcp_supply_chain.py  test_memory.py  test_new_adapters.py  test_openai_adapter.py  test_openai_agents_adapter.py  test_policy_compiler.py  test_policy_templates.py  test_policy_tester.py  test_pydantic_ai_adapter.py  test_regorus_client.py  test_sanitizer.py  test_sdk.py  test_session.py  test_session_budget.py  test_session_coverage.py  test_session_defaults.py  test_session_memory_policy.py  test_session_plan.py  (+2 more)
tests/adversarial/: test_injection.py  test_policy_bypass.py
tests/fuzz/: test_fuzz_policy_input.py  test_fuzz_sanitizer.py
tests/integration/: conftest.py  test_e2e.py
